# behave-html-pretty-formatter

./: .gitignore  CHANGES  MAINTAINERS  MANIFEST.in  README.md  behave.ini  formatter_html_pretty.py  improved.css  pyproject.toml  script.js  setup.py  tox.ini
.github/workflows/: checks.yml  packaging.yml  tests.yml
NEW_FOLDER/tests/acceptance/features/: help-screen.feature
NEW_FOLDER/tests/acceptance/steps/behave4cmd0/: __all_steps__.py
behave4cmd0/: __init__.py  __setup.py  command_steps.py  command_util.py  note_steps.py  passing_steps.py  setup_command_shell.py  textutil.py
behave4cmd0/log/: steps.py
behave_html_formatter/: __init__.py  behave.css  behave.js  behave.min.css  behave.min.js  html.py
behave_html_pretty_formatter/: __init__.py  behave.css  behave.js  behave.min.css  behave.min.js  behave_html_pretty_formatter.py  html_pretty.py  script.js  script.min.js  theme.css  theme.min.css
docs/: index.html
tests/acceptance/features/: help-screen.feature  html-output.feature
tests/acceptance/steps/: steps-library.py  use_steplib_behave4cmd.py
tests/acceptance/steps/behave4cmd0/: __all_steps__.py  command_shell.py  command_shell_proc.py  command_steps.py  command_util.py  failing_steps.py  note_steps.py  passing_steps.py  pathutil.py  textutil.py
tests/acceptance/steps/behave4cmd0/log/: __init__.py  steps.py
tests/formatter_features/: behave.ini
tests/formatter_features/features/: environment.py
tests/formatter_features/features/scenarios/: 00_dummy.feature
tests/formatter_features/features/steps/: steps.py
